# keytogo

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: config.md  testing.md
src/: accessibility.rs  config.rs  event_tap.rs  keymap.rs  main.rs  menu.rs  mouse.rs  overlay.rs  state.rs
