[package]
name = "keytogo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keytogo"
path = "src/main.rs"

[dependencies]
core-foundation = "0.9"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSGeometry", "NSThread", "NSData"] }
objc2-app-kit = { version = "0.2", features = [
    "NSResponder",
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSScreen",
    "NSColor",
    "NSGraphicsContext",
    "NSFont",
    "NSFontDescriptor",
    "NSBezierPath",
    "NSGraphics",
    "NSAttributedString",
    "NSRunningApplication",
    "NSImage",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSMenu",
    "NSMenuItem",
    "NSButton",
    "NSControl",
    "NSCell",
    "NSText",
] }
