[package]
name = "keytogo"
version = "0.1.1"
edition = "2021"
description = "Keyboard-only mouse navigation for macOS"
license = "MIT"
repository = "https://github.com/unitf90/keytogo"
homepage = "https://github.com/unitf90/keytogo"
readme = "README.md"
keywords = ["macos", "keyboard", "mouse", "accessibility", "cli"]
categories = ["command-line-utilities", "accessibility"]

[[bin]]
name = "keytogo"
path = "src/main.rs"

[dependencies]
core-foundation = "0.9"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSGeometry", "NSThread", "NSData"] }
objc2-app-kit = { version = "0.2", features = [
    "NSResponder",
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSScreen",
    "NSColor",
    "NSGraphicsContext",
    "NSFont",
    "NSFontDescriptor",
    "NSBezierPath",
    "NSGraphics",
    "NSAttributedString",
    "NSRunningApplication",
    "NSImage",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSMenu",
    "NSMenuItem",
    "NSButton",
    "NSControl",
    "NSCell",
    "NSText",
] }
